class ItemModel {
  String? nome;
  bool? check;

  //Instanciando a classe
  ItemModel({this.nome, this.check});
}