@startuml DC - Pedidos de Restaurante

class Restaurante {
    +nome: String
    +cardapio: List<Item>
}

class Item {
    +nome: String
    +preco: Float
    +descricao: String
}

/'
class Cardapio {
    +nome: String
}
'/

class PedidoItem {
    +pedido: Pedido
    +pedido: List<Item>
    +quantItem: Int
}

class Pedido {
    +data: Date
    +hora: Time
    +valorTotal: Float
    +formaPagamento():void
}

class Cliente {
    +nome: String
    +telefone: String
}

Restaurante "1..1" -- "1..*" Item : possui
'Restaurante "1..1" -- "1..*" Cardapio : possui
'Cardapio "1..1" -- "0..*" Item : contém
Pedido "1..1" -- "1..*" PedidoItem : possui
PedidoItem "1..*" -- "1..1" Item : esta em
Cliente "1..1" -- "0..*" Pedido : realiza
'Pedido "1..1" -- "1..*" Pagamento : tem
@enduml
